--- a/src/app/src/index.css
+++ b/src/app/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a { color: #777; }
+a:hover { text-decoration: none; color: #000 }
